--- a/references.bib
+++ b/references.bib
@@ -435,3 +435,13 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   url = 	 {https://proceedings.mlr.press/v206/krantsevich23a.html},
   abstract = 	 {Determining subgroups that respond especially well (or poorly) to specific interventions (medical or policy) requires new supervised learning methods tailored specifically for causal inference. Bayesian Causal Forest (BCF) is a recent method that has been documented to perform well on data generating processes with strong confounding of the sort that is plausible in many applications. This paper develops a novel algorithm for fitting the BCF model, which is more efficient than the previous Gibbs sampler. The new algorithm can be used to initialize independent chains of the existing Gibbs sampler leading to better posterior exploration and coverage of the associated interval estimates in simulation studies. The new algorithm is compared to related approaches via simulation studies as well as an empirical analysis.}
 }
+
+@inproceedings{he2019xbart,
+  title={XBART: Accelerated Bayesian additive regression trees},
+  author={He, Jingyu and Yalov, Saar and Hahn, P Richard},
+  booktitle={The 22nd International Conference on Artificial Intelligence and Statistics},
+  pages={1130--1138},
+  year={2019},
+  organization={PMLR},
+  url = 	 {https://proceedings.mlr.press/v89/he19a.html}
+}
