--- a/references.bib
+++ b/references.bib
@@ -445,3 +445,11 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   organization={PMLR},
   url = 	 {https://proceedings.mlr.press/v89/he19a.html}
 }
+
+@book{duke2019thinking,
+  title={Thinking in bets: Making smarter decisions when you don't have all the facts},
+  author={Duke, Annie},
+  year={2019},
+  publisher={Penguin},
+  url = 	 {https://www.google.com/books/edition/Thinking_in_Bets/CI-RDwAAQBAJ}
+}
